fix search bar size issue on tablet device

--- a/public/sass/header.sass
+++ b/public/sass/header.sass
@@ -61,7 +61,7 @@ header
   #search-btn
     border-radius: 0px 5px 5px 0px
 
-@media #{$phones}
+@media #{$phones, $tablets}
   .searchbar
     display: none
 
